autogen build errors
