# libs/autogen-clients/src/autogen/zod/cadastroDtoSchema.ts
@@ -1,19 +1,0 @@
-/**
- * Generated by Kubb (https://kubb.dev/).
- * Do not edit manually.
- */
-
-import { z } from 'zod/v4';
-
-export const cadastroDtoSchema = z.object({
-  id: z.string(),
-  nomeRazao: z.string(),
-  socialFantasia: z.string(),
-  cpfCnpj: z.string(),
-  nascimentoRegistro: z.string(),
-  phone: z.string(),
-  email: z.string(),
-  rg: z.string(),
-  createdAt: z.string().datetime(),
-  updatedAt: z.string().datetime(),
-});
